Servicio REST con dos validaciones
Servicio REST implementado

--- a/AppAsignacionPC/AppAsignacionPC.csproj
+++ b/AppAsignacionPC/AppAsignacionPC.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,7 +53,6 @@
     <Compile Include="AsignarPC.Designer.cs">
       <DependentUpon>AsignarPC.cs</DependentUpon>
     </Compile>
-    <Compile Include="JavaScriptSerializer.cs" />
     <Compile Include="PCsRegistrar.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -157,6 +157,12 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CapaEntidad\CapaEntidad.csproj">
+      <Project>{f4ee7d73-19e7-4a6e-bacc-2e52f1bf2bed}</Project>
+      <Name>CapaEntidad</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
